# reliquary-evaluation

./: .gitignore  DATASET_ANALYSIS.md  MINER_SETUP_B200_H200.md  engine-v2.py  engine-v3.py  engine-v4.py  engine.py  launcher-v4.py  launcher.py  main-v3.py  main-v4.py  math-v4.py  requirements-vllm.txt  submitter-v4.py  submitter.py  suggestion.md  vllm_adapter-v4.py  vllm_adapter.py
dashboard/: .env.local.example  .env.local.example.tmp.22476.94b6367d75a4  .gitignore  README.md  README.md.tmp.22476.70c2cd3f2d56  package-lock.json  package.json  tsconfig.tsbuildinfo
v1/: engine.py  main.py  openmathinstruct.py  prompt_cache.py
v10-2nd/: engine.py  main.py  pregen.py  run_miner.sh  setup.sh  vllm_backend.py
v2/: engine.py  launch_miner.sh  main.py
v2-35-0/: engine.py  main.py  miner-pregen.md  pregen.py  pyproject.toml  run_miner.sh  test_grail_cache.py
v2-35-0/scripts/: .env  measure_sketch_drift.py
v2-35-0/sn81-miner/backups/: hot_pool.polluted.bak
v2-35-0/sn81-miner/data/: submitted_idx.json
v2-35-0/sn81-miner/data/reference/: ourminer.json  scatter_hf_results.json  scatter_idxs.json  topminer.json  topminer2.json
v2-35-0/sn81-miner/dataprep/: brittle_pool.py
v2-35-h200-oci-frontier-v3-214/: auto_rebuild.sh
v3-single-h100/: .env  MINER_ANALYSIS.md  engine.py  launch_miner.sh  main.py  setup_miner.sh
v4-single-rtx-vllm/: .env  engine.py  eos_guard.py  launch_miner.sh  main.py  persistence.py  prep_dataset.py  prep_supervisor.py  publish_base_reset_checkpoint.py  scrape_intel.py  scraping.md  setup_miner.sh  supabase_schema.sql
v5/: .env-v1  (+4 more)
(+468 files in other folders)
