[project]
name = "reliquary"
version = "0.1.0"
description = "Reliquary — Verifiable Inference Subnet"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "torch>=2.1.0",
    # vLLM is the miner generation backend; the GRAIL proof stays on HF.
    # Validator/trainer installs that don't generate can omit it.
    "vllm>=0.20,<0.21",
    "numpy>=1.20.0",
    # Pinned exact: apply_chat_template output (encode_prompt) must be
    # byte-identical across all validators and miners, or PROMPT_MISMATCH
    # rejects honest miners. Bump only with a regenerated golden encoding in
    # tests/unit/test_tokens.py. Matches the live validator image.
    "transformers==5.9.0",
    "safetensors>=0.3.0",
    "bittensor>=9.0.0,<10.3.0",
    "pydantic>=2.3,<3.0.0",
    "requests>=2.28.0",
    "httpx>=0.25.0",
    "huggingface-hub>=0.20.0",
    "datasets>=2.14.0",
    "aiobotocore>=2.0.0",
    "boto3>=1.24.0",
    "botocore>=1.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "pyarrow>=14.0.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "bitsandbytes>=0.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
wandb = [
    "wandb>=0.16",
]

[project.scripts]
reliquary = "reliquary.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
